adding supabase configurations and CI-CD implmentation and docs for all tests and CI-CD steps i created also the makefile for helping contributors working and running the commands with confidence

--- a/.gitignore
+++ b/.gitignore
@@ -46,11 +46,14 @@ htmlcov/
 venv/
 env/
 
+
 # IDEs
 .vscode/
 .idea/
 .env.*
 !*.example
 .kiro
-data/
 scripts/
+data/
+supabase/.temp/
+.env.test
