--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ MONGODB_URI=mongodb://<host1>:27017,<host2>:27017,<host3>:27017/?replicaSet=<rep
 OPENROUTER_MODEL=youmodelhere 
 OPENROUTER_API_KEY=yourapikeyhere 
 FIRECRAWL_API_KEY=yourfircrawlapikey 
+SUPABASE_URL=https://your-project-ref.supabase.co
+SUPABASE_KEY=your-supabase-service-role-or-anon-key
