fixing ci-cd bugs all tests are working

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,28 @@
-TELEGRAM_TOKEN=YOUR_TELEGRAM_BOT_TOKEN
-PROJECT_NAME=PromoSectionBot
+# Environment Configuration
+ENVIRONMENT=development  # Options: development, production, test
+
+# Core Application Settings
+TELEGRAM_TOKEN=YOUR_TELEGRAM_BOT_TOKEN_HERE
+PROJECT_NAME=Promo Section Bot
 API_V1_STR=/api/v1
-PORT=8000
-MONGODB_URI=mongodb+srv://infosec412_db_user:o1obCc4f49nJYSuN@clusbotinfosec.1hdpx4o.mongodb.net/?retryWrites=true&w=majority&appName=Clusbotinfosecn
-MONGODB_URI=mongodb://<host1>:27017,<host2>:27017,<host3>:27017/?replicaSet=<replicaSetName>&tls=true&authSource=admin&retryWrites=true&w=majority&appName=YourApp
-OPENROUTER_MODEL=youmodelhere 
-OPENROUTER_API_KEY=yourapikeyhere 
-FIRECRAWL_API_KEY=yourfircrawlapikey 
+PORT=8080
+
+# Deployment Settings (for production webhook)
+PUBLIC_BASE_URL=https://your-domain.com
+
+# Database Configuration
+MONGODB_URI=mongodb://localhost:27017/infosec_bot
 SUPABASE_URL=https://your-project-ref.supabase.co
-SUPABASE_KEY=your-supabase-service-role-or-anon-key
+SUPABASE_KEY=your-supabase-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
+
+# External API Keys
+OPENROUTER_API_KEY=your-openrouter-api-key
+OPENROUTER_MODEL=openai/gpt-4o-mini
+FIRECRAWL_API_KEY=your-firecrawl-api-key
+ELEVEN_LAB_API_KEY=your-elevenlabs-api-key
+
+# Optional Settings
+OPENROUTER_SITE_URL=https://your-site.com
+OPENROUTER_SITE_TITLE=Your Site Title
+DISABLE_EXTERNAL_CALLS=false
